# ai-contact-center-starter-kit

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OPENAI_GRANT.md  PROJECT_PLAN.md  README.md  ROADMAP.md  SECURITY.md  TASK_DISTRIBUTION.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-pgvector.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/admin/: views.py
backend/app/admin/static/: admin.css  admin.js
backend/app/agent/: __init__.py  orchestrator.py  system_prompt.py  tool_registry.py
backend/app/core/: config.py  dependencies.py  dynamo.py  dynamo_init.py  logging.py  security.py
backend/app/pipeline/: __init__.py  ingestion.py
backend/app/routers/: __init__.py  admin.py  auth.py  chat_ws.py  chroma.py  conversations.py  documents.py  funds.py  llmops.py  ratings.py  tickets.py
backend/app/services/: __init__.py  document_processor.py  email_service.py  embedding_service.py  finetuning_service.py  fund_data_service.py  llm_service.py  storage_service.py  vector_service.py  vector_store.py
backend/scripts/: create_admin.py  evaluate_agent.py
backend/scripts/lambda_processor/: main.py
backend/tests/: __init__.py  conftest.py
backend/tests/eval/: golden_dataset.json
backend/tests/integration/: test_chat_ws.py  test_documents.py  test_pgvector.py  test_tickets.py
backend/tests/unit/: test_agent.py  test_document_processor.py  test_orchestrator.py  test_risk_profile.py  test_tools.py  test_vector_store.py
docs/: DATA_GATHERING_GUIDE.md  (+7 more)
(+144 files in other folders)
